@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-15T01:58:51Z",
+  "timestamp" : "2022-11-15T08:30:11Z",
   "count_outdated" : 887,
   "uniques_outdated" : 466,
-  "count" : 894,
-  "uniques" : 470,
+  "count" : 896,
+  "uniques" : 472,
   "clones" : [
     {
       "timestamp": "2022-11-01T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -32,6 +32,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-15T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
