@@ -1,10 +1,10 @@
 {
-  "count": 7,
-  "uniques": 1,
+  "count": 9,
+  "uniques": 2,
   "clones": [
     {
       "timestamp": "2022-11-01T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -21,6 +21,11 @@
       "timestamp": "2022-11-14T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-11-15T00:00:00Z",
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
