@@ -1,3 +1,11 @@
+2022-11-15T08:30:11Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3468715243 # 1034
+* notice: last 14d: unq all: 2 9
+* notice: prev accum: outdated-unq outdated-all / unq all: 466 887 / 470 894
+* notice: next accum: outdated-unq outdated-all / unq all: 466 887 / 472 896
+* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -1 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2022-11-01 2022-11-15]
+
 2022-11-15T01:58:51Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3466776907 # 1033
 * notice: last 14d: unq all: 1 7
